# mp

./: pyproject.toml
maniaperfumaria/: app.py  database.py  schemas.py  security.py
maniaperfumaria/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: d1a89618e995_create_tables_in_postgresql.py  da7aa9ca61b7_create_users_table.py  e5ef7159f1ce_create_todos_table.py
mp_vendas/: package-lock.json  package.json
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_todos.py  test_users.py
